language/move-lang/tests/move_check/parser/struct_missing_lbrace.exp
error: 

   ┌── tests/move_check/parsing/struct_missing_lbrace.move:3:5 ───
   │
 3 │     f() {}
   │     ^ Unrecognized Token: f
   ·
 3 │     f() {}
   │     - Expected:  ",", "}",
   │

